# claude-buddy-linux

./: README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/claude_buddy/: __init__.py  __main__.py  cmds.py  config.py  daemon.py  hook.py  pair.py  setup_cmd.py
src/claude_buddy/data/: claude-buddy.service.in
